--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
         <p>
           In Class:<br>
           - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: María, Ashley, Carla</a><br>
-          - <a href="" target="_blank">Walk Presentations</a><br>
+          - <a href="https://docs.google.com/presentation/d/1frc3SBCpSP18tmrRqKA8-cWBUlWqeop9EISMwg6hjNQ/edit#slide=id.p" target="_blank">Walk Presentations</a><br>
           - Exercise: <a href="" target="_blank">Navigation</a>
           <br><br>
           ✳ break ✳
@@ -320,10 +320,13 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
             Next Class:<br>
             - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: So Young, Giordana, Krishangi</a><br>
             - Guest Visit: <a href="https://eric.young.li/" target="_blank">Eric Li</a> and <a href="https://nazli-ercan.com/" target="_blank">Nazlı Ercan</a>
+            <br><br>
+            Project:<br>
+            - Interview Review<br>
+            - Questions
           </span>
         </p>
       </div>
-
 
       <button class="accordion"><li>Class 11, Apr 13</li></button>
       <div class="panel">
@@ -334,13 +337,8 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           <br><br>
           <span class="nextclass">
             Next Class:<br>
-            - Read <a href="https://medium.com/s/user-friendly/why-im-done-saying-user-user-experience-and-ux-in-2019-4fdfc6b7de23" target="_blank">As a Designer, I Refuse to Call People ‘Users’</a>, Adam Lefton<br>
-            - Read <a href="https://frankchimero.com/blog/2015/the-webs-grain/" target="_blank">The Web's Grain</a>, Frank Chimero<br>
-            <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Reflections</a>
-            <br><br>
             Project:<br>
-            - Interview Review<br>
-            - Questions
+            - Walk and Transcription
           </span>
         </p>
       </div>
@@ -350,18 +348,17 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
         <p>
           In Class:<br>
           - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Discussion</a><br>
-          - Interview Review and 5 Questions
+          - <a href="" target="_blank">JS 3: Arrays, Loops</a><br>
           <br><br>
           ✳ break ✳
           <br><br>
-          - <a href="" target="_blank">JS 3: Arrays, Loops</a><br>
+          - Working Session
           <br><br>
           <span class="nextclass">
             Next Class:<br>
-            - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a>
-            <br><br>
-            Project:<br>
-            - Walk and Transcription<br>
+            - Read <a href="https://medium.com/s/user-friendly/why-im-done-saying-user-user-experience-and-ux-in-2019-4fdfc6b7de23" target="_blank">As a Designer, I Refuse to Call People ‘Users’</a>, Adam Lefton<br>
+            - Read <a href="https://frankchimero.com/blog/2015/the-webs-grain/" target="_blank">The Web's Grain</a>, Frank Chimero<br>
+            - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Reflections</a>
           </span>
         </p>
       </div>
@@ -370,8 +367,8 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           In Class:<br>
-          - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Person 1, 2, 3</a><br>
-          - Work Session
+          - Work Session<br>
+          - WIP Critique
           <br><br>
           <span class="nextclass">
             Next Class:<br>
@@ -401,6 +398,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
         <p>
           In Class:<br>
           - Exercise: Update<br>
+          - Finish Page
         </p>
       </div>
 
