--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           In Class:<br>
           - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: María, Ashley, Carla</a><br>
           - <a href="https://docs.google.com/presentation/d/1frc3SBCpSP18tmrRqKA8-cWBUlWqeop9EISMwg6hjNQ/edit#slide=id.p" target="_blank">Walk Presentations</a><br>
-          - Exercise: <a href="" target="_blank">Navigation</a>
+          - Exercise: <a href="https://type-and-interaction-too.notion.site/Navigation-440423c993c243c8afedf7f7e25ada7d" target="_blank">Navigation</a>
           <br><br>
           ✳ break ✳
           <br><br>
@@ -631,10 +631,9 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
 
         <button class="accordion"><li><a href="https://type-and-interaction-too.notion.site/Top-10-348ae7844a584852a9ae58d4d85ccd7e" target="_blank">Top 10</a></li></button>
 
-        <button class="accordion"><li>Navigation</li></button>
-        <div class="panel">
-          <p>Lorem ipsum dolor iset</p>
-        </div>
+        <button class="accordion"><li><a href="https://type-and-interaction-too.notion.site/Navigation-440423c993c243c8afedf7f7e25ada7d" target="_blank">Navigation</a></li></button>
+
+        <button class="accordion"><li><a href="" target="_blank">Inspector</a></li></button>
 
         <button class="accordion"><li>Interview Review</li></button>
         <div class="panel">
