--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           ✳ break ✳
           <br><br>
           - <a href="" target="_blank">CSS 1: Style, Selector, Class, ID</a><br>
-          - Exercise: Inspector
+          - Exercise: <a href="https://type-and-interaction-too.notion.site/Inspector-26be6b1685e749689ba54d05ec8419aa" target="_blank">Inspector</a>
           <br><br>
           <span class="nextclass">
             Next Class:<br>
@@ -633,7 +633,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
 
         <button class="accordion"><li><a href="https://type-and-interaction-too.notion.site/Navigation-440423c993c243c8afedf7f7e25ada7d" target="_blank">Navigation</a></li></button>
 
-        <button class="accordion"><li><a href="" target="_blank">Inspector</a></li></button>
+        <button class="accordion"><li><a href="https://type-and-interaction-too.notion.site/Inspector-26be6b1685e749689ba54d05ec8419aa" target="_blank">Inspector</a></li></button>
 
         <button class="accordion"><li>Interview Review</li></button>
         <div class="panel">
@@ -939,7 +939,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
 
     Special thank you to Evan Chang, Simone Cutrí, Luiza Dale, Brendan Griffiths, Rosa McElheny, Aidan Quinlan, Steven Rodriguez, Mindy Seu, Mianwei Wang, and many others who helped shape this class and continue to weave a generous web for all.
     <br><br>
-    Last Updated: Sat Jan 30, 2022
+    Last Updated: Sat Feb 5, 2022
   </footer>
 
 
