--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           <br><br>
           ✳ break ✳
           <br><br>
-          - <a href="" target="_blank">CSS 1: Style, Selector, Class, ID</a><br>
+          - <a href="https://type-and-interaction-too.notion.site/CSS-Basics-f0d7818a6c9b4995a8c08debef9ed981" target="_blank">CSS 1: Style, Selector, Class, ID</a><br>
           - Exercise: <a href="https://type-and-interaction-too.notion.site/Inspector-26be6b1685e749689ba54d05ec8419aa" target="_blank">Inspector</a>
           <br><br>
           <span class="nextclass">
@@ -939,7 +939,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
 
     Special thank you to Evan Chang, Simone Cutrí, Luiza Dale, Brendan Griffiths, Rosa McElheny, Aidan Quinlan, Steven Rodriguez, Mindy Seu, Mianwei Wang, and many others who helped shape this class and continue to weave a generous web for all.
     <br><br>
-    Last Updated: Sat Feb 5, 2022
+    Last Updated: Mon Feb 7, 2022
   </footer>
 
 
