--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           <a href="" target="_blank">Jess Chen</a> ( )<br>
           <a href="http://antoinettechow.com/interaction/" target="_blank">Antoinette Chow</a> (she/her)<br>
           <a href="https://mads1208.github.io/Interaction/" target="_blank">Madhu Gengatheran Kandasami</a> (she/her)<br>
-          <a href="" target="_blank">Amy Jongjitt</a> (she/her)<br>
+          <a href="https://amyjongjitt.github.io/interaction/" target="_blank">Amy Jongjitt</a> (she/her)<br>
           <a href="https://bryanisab0t.github.io/interaction/" target="_blank">Bryan Oh</a> (he/him)<br>
           <a href="https://soyoungg0429.github.io/interaction/" target="_blank">So Young Park</a> (she/her)<br>
           <a href="https://giolla97.github.io/Interaction/" target="_blank">Giordana Pulpo</a> (she/her)<br>
