--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           ✳ break ✳
           <br><br>
           - <a href="https://type-and-interaction-too.notion.site/CSS-Basics-f0d7818a6c9b4995a8c08debef9ed981" target="_blank">CSS 1: Style, Selector, Class, ID</a><br>
-          <em>Start by downloading this <a href="assets/downloads/CSSdemo.zip" download> demo file</a>.</em>
+          <em>Start by downloading this <a href="assets/downloads/CSSdemo.zip" download> demo file</a>.</em><br>
           - Exercise: <a href="https://type-and-interaction-too.notion.site/Inspector-26be6b1685e749689ba54d05ec8419aa" target="_blank">Inspector</a>
           <br><br>
           <span class="nextclass">
