--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           <br><br>
           <a href="https://agark684.github.io/interaction/" target="_blank">Krishangi Agarwal</a> (she/her)<br>
           <a href="https://liambrettenny.github.io/interaction/" target="_blank">Liam Brettenny</a> (he/him)<br>
-          <a href="https://jesschen06.github.io/Interaction/" target="_blank">Jess Chen</a> (she/her)<br>
+          <a href="https://jesschen06.github.io/interaction/" target="_blank">Jess Chen</a> (she/her)<br>
           <a href="http://antoinettechow.com/interaction/" target="_blank">Antoinette Chow</a> (she/her)<br>
           <a href="https://mads1208.github.io/Interaction/" target="_blank">Madhu Gengatheran Kandasami</a> (she/her)<br>
           <a href="https://amyjongjitt.github.io/interaction/" target="_blank">Amy Jongjitt</a> (she/her)<br>
