--- a/index.html
+++ b/index.html
@@ -182,14 +182,17 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
         <p>
           In Class:<br>
           - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Discussion</a><br>
-          - <a href="" target="_blank">CSS 2: Positioning</a>
+          - Continue <a href="https://type-and-interaction-too.notion.site/CSS-1-Style-Selector-Class-ID-eb65980b95f54c0fb77794830d77ad9c" target="_blank">CSS 1: Style, Selector, Class, ID</a><br>
+          - <a href="https://type-and-interaction-too.notion.site/CSS-2-Layout-Positioning-dad56397afd24704bdda4c61bd16f236" target="_blank">CSS 2: Positioning</a>
           <br><br>
           ✳ break ✳
           <br><br>
+          - Exercise: <a href="https://type-and-interaction-too.notion.site/Inspector-26be6b1685e749689ba54d05ec8419aa" target="_blank">Inspector</a><br>
           - Path Sketches
           <br><br>
           <span class="nextclass">
             Next Class:<br>
+            - Exercise: <a href="https://type-and-interaction-too.notion.site/Shape-Composition-4617accda7fe46308e34d9cae1b3d70a" target="_blank">Shape Composition</a><br>
             - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Antoinette, Madhu, Bryan</a>
             <br><br>
             Project:<br>
@@ -941,7 +944,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
 
     Special thank you to Evan Chang, Simone Cutrí, Luiza Dale, Brendan Griffiths, Rosa McElheny, Aidan Quinlan, Steven Rodriguez, Mindy Seu, Mianwei Wang, and many others who helped shape this class and continue to weave a generous web for all.
     <br><br>
-    Last Updated: Mon Feb 7, 2022
+    Last Updated: Tue Feb 15, 2022
   </footer>
 
 
