Shape Comp Answers

--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           - Exercise: <a href="https://type-and-interaction-too.notion.site/Inspector-26be6b1685e749689ba54d05ec8419aa" target="_blank">Inspector</a><br>
           - Exercise: <a href="https://type-and-interaction-too.notion.site/Shape-Composition-4617accda7fe46308e34d9cae1b3d70a" target="_blank">Shape Composition</a><br>
           <em>Download <a href="assets/downloads/ShapeComposition.zip" download>this zip</a> to get started.</em><br>
+          <em>Download <a href="assets/downloads/ShapeCompositionAnswers.zip" download>the answers</a> here.</em><br>
           - Path Sketches
           <br><br>
           <span class="nextclass">
