--- a/index.html
+++ b/index.html
@@ -208,7 +208,8 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
         <p>
           In Class:<br>
           - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Antoinette, Madhu, Bryan</a><br>
-          - <a href="" target="_blank">CSS 3: Flexbox and Media Query</a>
+          - <a href="https://type-and-interaction-too.notion.site/CSS-3-Flexbox-60ba92c358b14bdca729d83dd375aaa5" target="_blank">CSS 3: Flexbox</a><br>
+          - <a href="https://flexboxfroggy.com/" target="_blank">Flexbox Froggy</a>
           <br><br>
           ✳ break ✳
           <br><br>
@@ -218,7 +219,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
             Next Class:<br>
             Project:<br>
             - <a href="" target="_blank">Path Critique</a><br>
-            <em>For the final critique of this project, you will post your link on this <a href="" target="_blank">document</a>. The person preceding your name on the list will navigate your Path before we critique it as a class.</em>
+            <em>For the final critique of this project, you will post your link on this <a href="https://docs.google.com/document/d/13l21bbjnIHigmqFNAPaLOIiBQyCVmZ77tXaECNAVA3M/edit?usp=sharing" target="_blank">document</a>. The person preceding your name on the list will navigate your Path before we critique it as a class.</em>
           </span>
         </p>
       </div>
@@ -251,7 +252,8 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           <br><br>
           ✳ break ✳
           <br><br>
-          - <a href="" target="_blank">JS 1: Console, Variables, Events</a>
+          - <a href="" target="_blank">CSS 4: Media Query</a>
+          <!-- - <a href="" target="_blank">JS 1: Console, Variables, Events</a> -->
           <br><br>
           <span class="nextclass">
             Next Class:<br>
