--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           In Class:<br>
           - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Antoinette, Madhu, Bryan</a><br>
           - <a href="https://type-and-interaction-too.notion.site/CSS-3-Flexbox-60ba92c358b14bdca729d83dd375aaa5" target="_blank">CSS 3: Flexbox</a><br>
+          <em>Download <a href="assets/downloads/FlexboxDemo.zip" download>this zip</a> to get started.</em><br>
           - <a href="https://flexboxfroggy.com/" target="_blank">Flexbox Froggy</a>
           <br><br>
           ✳ break ✳
