--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           <span class="nextclass">
             Next Class:<br>
             Project:<br>
-            - <a href="" target="_blank">Path Critique</a><br>
+            - <a href="https://docs.google.com/document/d/13l21bbjnIHigmqFNAPaLOIiBQyCVmZ77tXaECNAVA3M/edit" target="_blank">Path Critique</a><br>
             <em>For the final critique of this project, you will post your link on this <a href="https://docs.google.com/document/d/13l21bbjnIHigmqFNAPaLOIiBQyCVmZ77tXaECNAVA3M/edit?usp=sharing" target="_blank">document</a>. The person preceding your name on the list will navigate your Path before we critique it as a class.</em>
           </span>
         </p>
@@ -230,7 +230,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
         <p>
           In Class:<br>
           - Introduce Project 2: Archive<br>
-          - <a href="" target="_blank">Path Critique</a>
+          - <a href="https://docs.google.com/document/d/13l21bbjnIHigmqFNAPaLOIiBQyCVmZ77tXaECNAVA3M/edit" target="_blank">Path Critique</a>
           <br><br>
           <span class="nextclass">
             Next Class:<br>
