--- a/index.html
+++ b/index.html
@@ -238,8 +238,9 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
             - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Reflections</a>
             <br><br>
             Project:<br>
-            - Begin your collection of 40 items<br>
-            <em>Choose something from your walk as the focus. Your collection will be housed on a new Are.na channel you create and should consist of external texts, images, videos, sounds, links, etc.</em>
+            - Begin your collection of 20 items<br>
+            <em>Choose something from your walk as the focus. Your collection will be housed on a new Are.na channel you create and should consist of external texts and images.<br><br>
+            Once you have your collection, post a link <a href="https://docs.google.com/document/d/15wrupzfakxnjPQIiAg86QSCl7NV-3m-jy_EDYya_gXo/edit?usp=sharing" target="_blank">here</a> and we'll each casually share some items from our collection for next time.</em>
           </span>
         </p>
       </div>
@@ -253,7 +254,9 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           <br><br>
           ✳ break ✳
           <br><br>
-          - <a href="" target="_blank">CSS 4: Media Query</a>
+          - Collection Share<br>
+          - Set Up Are.na CMS
+          <!-- - <a href="" target="_blank">CSS 4: Media Query</a> -->
           <!-- - <a href="" target="_blank">JS 1: Console, Variables, Events</a> -->
           <br><br>
           <span class="nextclass">
@@ -262,8 +265,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
             - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Amy, Jess, Liam</a>
             <br><br>
             Project:<br>
-            - Collection Presentation<br>
-            <em>Prepare to share your collection including a brief text introducing the theme and 5 items.</em>
+            - Begin your Archive site.
           </span>
         </p>
       </div>
@@ -282,11 +284,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
         <p>
           In Class:<br>
           - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Amy, Jess, Liam</a><br>
-          - Collection Presentations and Swap
-          <br><br>
-          ✳ break ✳
-          <br><br>
-          - Set Up Are.na CMS
+          - WIP Critiques of Archive Site
           <br><br>
           <span class="nextclass">
             Next Class:<br>
@@ -294,8 +292,9 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
             - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Reflections</a>
             <br><br>
             Project:<br>
-            - Sketch 2-3 directions<br>
-            <em>Prepare to share 2-3 possible directions for your Archive including ways for visitors to filter and navigate your collection.</em>
+            - Archive Critique<br>
+            <em>For the final critique of this project, you will post your link on this <a href="" target="_blank">document</a>. </em>
+              <!-- The original creator of your site's collection will navigate the site then we will critique it as a class.</em> -->
           </span>
         </p>
       </div>
@@ -305,16 +304,15 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
         <p>
           In Class:<br>
           - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Discussion</a><br>
-          - <a href="" target="_blank">JS 2: Operators, Functions</a>
-          <br><br>
-          ✳ break ✳
-          <br><br>
-          - Archive Sketches
+          - Introduce Project 3: Query<br>
+          - Archive Critique
+          <!-- - <a href="" target="_blank">JS 2: Operators, Functions</a> -->
           <br><br>
           <span class="nextclass">
             Next Class:<br>
-            - Archive Critique<br>
-            <em>For the final critique of this project, you will post your link on this <a href="" target="_blank">document</a>. The original creator of your site's collection will navigate the site then we will critique it as a class.</em>
+            Project:<br>
+            - Interview Review<br>
+            - Questions
           </span>
         </p>
       </div>
@@ -486,43 +484,41 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           <p>
             Examine how we sift through the web for content that helps us learn and connect. In this vast repository of information, what kind of systems of organization bring forward items of importance or moments of discovery? What content is de-prioritized or further obscured?
             <br><br>
-            Begin a collection of 40 things using something from your walk as the focus. Your collection will be housed on a new Are.na channel you create and should consist of external texts, images, videos, sounds, links, etc.
+            Begin a collection of 20 things using something from your walk as the focus. Your collection will be housed on a new Are.na channel you create and should consist of external texts and images.
             <br><br>
-            You will then share your collection and 5 items from it with your class in a brief presentation. Afterwards, you will swap your collection with a classmate and add 10 additional items to your new collection.
+            You will then share your collection and 5 items from it with your class in a casual presentation.
             <br><br>
             Finally, you will create a website organizing your newly swapped collection. It is crucial to remember that you are designing a flexible system, one that can grow and change over time, not a static website.
-            See references on the <a href="" target="_blank">Archive Are.na channel</a>.
+            See references on the <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/archive-aaoknbtszyi" target="_blank">Archive Are.na channel</a>.
             <br><br>
             REQUIREMENTS:<br>
             ① Collection<br>
             - Have a theme taken from something you noticed on your walk.<br>
             - Include a brief text introducing the idea behind your collection.<br>
-            - Have 50 items total, 40 added by you and 10 added by your classmate.<br>
-            - All 50 items must be external, meaning something you did not create.<br>
+            - Have at least 20 items total.<br>
+            - All items must be external, meaning something you did not create.<br>
             - Feel cohesive in terms of theme.<br>
             - Must be hosted on Are.na
             <br><br>
             ② Website<br>
             - Include a brief text introducing the idea behind your collection.<br>
             - Be intentional with your organization.<br>
-            - Include an index of some kind.<br>
             - Flexible with consideration that it can grow in the future.<br>
             - Include a favicon.
             <br><br>
             FINAL CRITIQUE:<br>
-            For the final critique of this project, you will post your link on this <a href="" target="_blank">document</a>. The original creator of your site's collection will navigate the site then we will critique it as a class.
+            For the final critique of this project, you will post your link on this <a href="https://docs.google.com/document/d/17JsfSYOqaRbE6PHOaEYTIy2fPCvuaZ15LgI5GkCKRCM/edit?usp=sharing" target="_blank">document</a>.
             <br><br>
             CONSIDERATIONS:<br>
             - Does a narrative begin to form?<br>
             - How do you style various types of content?<br>
             - How will you organize your content? By chronology, color, media type, location, random?<br>
-            - All systems of organization have an implicit bias, be forward and honest with yours.
             <br><br>
             SCHEDULE:<br>
             - Class 6, Mar 2: Introduce Project<br>
-            - Class 8, Mar 23: Collection Presentations<br>
-            - Class 9, Mar 30: Archive Sketches<br>
-            - Class 11, Apr 13: Project Critique
+            - Class 7, Mar 7: Collection Presentation
+            - Class 8, Mar 23: WIP Critique<br>
+            - Class 9, Mar 30: Project Critique
           </p>
         </div>
 
