--- a/index.html
+++ b/index.html
@@ -512,11 +512,11 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
             CONSIDERATIONS:<br>
             - Does a narrative begin to form?<br>
             - How do you style various types of content?<br>
-            - How will you organize your content? By chronology, color, media type, location, random?<br>
+            - How will you organize your content? By chronology, color, media type, location, random?
             <br><br>
             SCHEDULE:<br>
             - Class 6, Mar 2: Introduce Project<br>
-            - Class 7, Mar 7: Collection Presentation
+            - Class 7, Mar 7: Collection Presentation<br>
             - Class 8, Mar 23: WIP Critique<br>
             - Class 9, Mar 30: Project Critique
           </p>
@@ -945,7 +945,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
 
     Special thank you to Evan Chang, Simone Cutrí, Luiza Dale, Brendan Griffiths, Rosa McElheny, Aidan Quinlan, Steven Rodriguez, Mindy Seu, Mianwei Wang, and many others who helped shape this class and continue to weave a generous web for all.
     <br><br>
-    Last Updated: Tue Feb 15, 2022
+    Last Updated: Tue Mar 1, 2022
   </footer>
 
 
