--- a/index.html
+++ b/index.html
@@ -249,19 +249,20 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           In Class:<br>
-          - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Discussion</a><br>
           - Guest Visit: <a href="https://herdimasanggara.com/" target="_blank">Herdimas Anggara</a>
           <br><br>
           ✳ break ✳
           <br><br>
+          - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Discussion</a><br>
           - Collection Share<br>
-          - Set Up Are.na CMS
+          <!-- - <a href="https://docs.google.com/document/d/17JsfSYOqaRbE6PHOaEYTIy2fPCvuaZ15LgI5GkCKRCM/edit" target="_blank">Collection Share</a><br> -->
+          - Set Up Are.na CMS<br>
+          <em>Download the <a href="assets/downloads/archive-main.zip" download>Page Template</a>.<br></em>
           <!-- - <a href="" target="_blank">CSS 4: Media Query</a> -->
           <!-- - <a href="" target="_blank">JS 1: Console, Variables, Events</a> -->
           <br><br>
           <span class="nextclass">
             Next Class:<br>
-            - <a href="" target="_blank">Midterm Survey</a><br>
             - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Amy, Jess, Liam</a>
             <br><br>
             Project:<br>
