--- a/index.html
+++ b/index.html
@@ -254,10 +254,9 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           ✳ break ✳
           <br><br>
           - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Discussion</a><br>
-          - Collection Share<br>
-          <!-- - <a href="https://docs.google.com/document/d/17JsfSYOqaRbE6PHOaEYTIy2fPCvuaZ15LgI5GkCKRCM/edit" target="_blank">Collection Share</a><br> -->
+          - <a href="https://docs.google.com/document/d/17JsfSYOqaRbE6PHOaEYTIy2fPCvuaZ15LgI5GkCKRCM/edit" target="_blank">Collection Share</a><br>
           - Set Up Are.na CMS<br>
-          <em>Download the <a href="assets/downloads/archive-main.zip" download>Page Template</a>.<br></em>
+          <em>Download the <a href="assets/downloads/archive-main.zip" download>Page Template</a>.</em>
           <!-- - <a href="" target="_blank">CSS 4: Media Query</a> -->
           <!-- - <a href="" target="_blank">JS 1: Console, Variables, Events</a> -->
           <br><br>
