--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
         <p>
           In Class:<br>
           - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: Amy, Jess, Liam</a><br>
-          - WIP Critiques of Archive Site
+          - <a href="https://docs.google.com/document/d/1fS2OFx4bQTcHuDN-4C3ES9ZrOf99fuiXftpyYbNhyzg/edit" target="_blank">WIP Critiques of Archive Site</a>
           <br><br>
           <span class="nextclass">
             Next Class:<br>
@@ -293,8 +293,8 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
             <br><br>
             Project:<br>
             - Archive Critique<br>
-            <em>For the final critique of this project, you will post your link on this <a href="" target="_blank">document</a>. </em>
-              <!-- The original creator of your site's collection will navigate the site then we will critique it as a class.</em> -->
+            <em>For the final critique of this project, you will post your link on this <a href="https://docs.google.com/document/d/1P3-7uxsimv2HFHzW9zMLUTj66FER5p2t9JmqrRIZcT8/edit" target="_blank">document</a>.
+            The original creator of your site's collection will navigate the site then we will critique it as a class.</em>
           </span>
         </p>
       </div>
@@ -945,7 +945,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
 
     Special thank you to Evan Chang, Simone Cutrí, Luiza Dale, Brendan Griffiths, Rosa McElheny, Aidan Quinlan, Steven Rodriguez, Mindy Seu, Mianwei Wang, and many others who helped shape this class and continue to weave a generous web for all.
     <br><br>
-    Last Updated: Tue Mar 1, 2022
+    Last Updated: Tue Mar 22, 2022
   </footer>
 
 
