--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
             - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Reflections</a>
             <br><br>
             Project:<br>
-            - Archive Critique<br>
+            <a href="https://docs.google.com/document/d/1P3-7uxsimv2HFHzW9zMLUTj66FER5p2t9JmqrRIZcT8/edit" target="_blank">- Archive Critique</a><br>
             <em>For the final critique of this project, you will post your link on this <a href="https://docs.google.com/document/d/1P3-7uxsimv2HFHzW9zMLUTj66FER5p2t9JmqrRIZcT8/edit" target="_blank">document</a>.
             The original creator of your site's collection will navigate the site then we will critique it as a class.</em>
           </span>
